Fix textarea overflow

--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -148,3 +148,7 @@ body,
   display: flex;
   flex-direction: column;
 }
+
+textarea {
+  box-sizing: border-box;
+}
