--- a/src/assets/styles/components/_edit-form.scss
+++ b/src/assets/styles/components/_edit-form.scss
@@ -19,7 +19,10 @@
   padding: 0px 30px;
 }
 
+.edit-form-texteditor {
+  padding: 0px 10px;
+}
 .edit-form-textarea {
   width: 100%;
-  height: 100px;
+  height: 500px;
 }
